# open-agent-evaluation

./: .gitignore  AGENTS.md  CLAUDE.md  CLAUDES.md  README.md  pyproject.toml
cases/slides/capability/academic_research_defense_v1/: case.json
cases/slides/capability/brand_refresh_rework_v1/: case.json
cases/slides/capability/city_mobility_policy_brief_v1/: case.json
cases/slides/capability/compliance_training_v1/: case.json
cases/slides/capability/enterprise_security_sales_v1/: case.json
cases/slides/capability/executive_decision_options_v1/: case.json
cases/slides/capability/manufacturing_ops_review_v1/: case.json
cases/slides/capability/nonprofit_impact_fundraising_v1/: case.json
cases/slides/capability/product_launch_keynote_v1/: case.json
cases/slides/capability/product_pitch_v1/: case.json
cases/slides/capability/qbr_data_story_v1/: case.json
docs/: authoring_cases.md  repository_design.md  slides_evaluation_design.md
docs/manuel/: authoring_cases.md
docs/technical/: repository_design.md
examples/results/: sample_case_result.json
examples/submissions/: README.md
schemas/: README.md  evaluation_case.schema.json  evaluation_result.schema.json  grader.schema.json  submission.schema.json
src/open_agent_evaluation/: __init__.py  case_loader.py  cli.py  metrics.py  models.py  pipeline.py
src/open_agent_evaluation/graders/: __init__.py  base.py  code.py  deterministic.py  external.py  judges.py  pptx.py  registry.py
tests/: helpers.py  test_case_integrity.py  test_case_loader.py  test_pipeline.py  test_pptx_grader.py
(+50 files in other folders)
